--- a/card.html
+++ b/card.html
@@ -6,7 +6,51 @@
     <title> Tailwind Card</title>
      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
-    
+<body class="">
+    <section>
+        <!-- card1 -->
+        <div class="w-80 border-2 border-amber-600 rounded-lg p-2.5">
+            <img class="rounded-lg" src="./images/watch.jpg" alt="">
+            <h3 class=" font-bold text-[31px] ">Samsung Watch</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore nulla atque distinctio accusantium hic recusandae possimus facilis, inventore laborum assumenda voluptates modi vero reprehenderit consectetur non voluptatibus eos aliquid. Quibusdam?</p>
+            <button class="my-3 h-10 w-30 bg-amber-600  rounded-lg">Buy Now</button>
+        </div>
+    </section>
+     <section>
+        <!-- card2 -->
+        <div class="w-80 border-2 border-amber-600 rounded-lg p-2.5">
+            <img class="rounded-lg" src="./images/watch.jpg" alt="">
+            <h3 class=" font-bold text-[31px] ">Samsung Watch</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore nulla atque distinctio accusantium hic recusandae possimus facilis, inventore laborum assumenda voluptates modi vero reprehenderit consectetur non voluptatibus eos aliquid. Quibusdam?</p>
+            <button class="my-3 h-10 w-30 bg-amber-600  rounded-lg">Buy Now</button>
+        </div>
+    </section>
+     <section>
+        <!-- card3 -->
+        <div class="w-80 border-2 border-amber-600 rounded-lg p-2.5">
+            <img class="rounded-lg" src="./images/watch.jpg" alt="">
+            <h3 class=" font-bold text-[31px] ">Samsung Watch</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore nulla atque distinctio accusantium hic recusandae possimus facilis, inventore laborum assumenda voluptates modi vero reprehenderit consectetur non voluptatibus eos aliquid. Quibusdam?</p>
+            <button class="my-3 h-10 w-30 bg-amber-600  rounded-lg">Buy Now</button>
+        </div>
+    </section>
+     <section>
+        <!-- card4 -->
+        <div class="w-80 border-2 border-amber-600 rounded-lg p-2.5">
+            <img class="rounded-lg" src="./images/watch.jpg" alt="">
+            <h3 class=" font-bold text-[31px] ">Samsung Watch</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore nulla atque distinctio accusantium hic recusandae possimus facilis, inventore laborum assumenda voluptates modi vero reprehenderit consectetur non voluptatibus eos aliquid. Quibusdam?</p>
+            <button class="my-3 h-10 w-30 bg-amber-600  rounded-lg">Buy Now</button>
+        </div>
+    </section>
+     <section>
+        <!-- card5 -->
+        <div class="w-80 border-2 border-amber-600 rounded-lg p-2.5">
+            <img class="rounded-lg" src="./images/watch.jpg" alt="">
+            <h3 class=" font-bold text-[31px] ">Samsung Watch</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore nulla atque distinctio accusantium hic recusandae possimus facilis, inventore laborum assumenda voluptates modi vero reprehenderit consectetur non voluptatibus eos aliquid. Quibusdam?</p>
+            <button class="my-3 h-10 w-30 bg-amber-600  rounded-lg">Buy Now</button>
+        </div>
+    </section>
 </body>
 </html>
