--- a/card.html
+++ b/card.html
@@ -6,7 +6,7 @@
     <title> Tailwind Card</title>
      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body class="">
+<body class="p-10 flex justify-between ">
     <section>
         <!-- card1 -->
         <div class="w-80 border-2 border-amber-600 rounded-lg p-2.5">
